ferry fuel and updated header date to 9/1/25

--- a/html/Maintenance/Ferry Fuel System.html
+++ b/html/Maintenance/Ferry Fuel System.html
@@ -25,7 +25,7 @@
         Ensure that hopper is completely empty, clean and dry before beginning installation.
     </li>
     <li>
-        Remove existing plug from fuel valve and retain for reinstallation.
+        Remove existing cap from fuel valve and retain for reinstallation.
         <figure>
             <img class="imageCentered_4x3" src="img/img_FerryFuelValveCapRemoval.png">
             <figcaption class="centerText">Valve Cap Removal</figcaption>
@@ -69,11 +69,19 @@
             </li>
             <li>
                 Secure 80376-2 adapter hose onto gatebox tube with two Q200M56S clamps.
+                <figure>
+                    <img class="imageCentered_6x6" src="img/img_FerryFuelGateboxTubeInstallation.png">
+                    <figcaption class="centerText">Gatebox Tube Installation</figcaption>
+                </figure>
             </li>
         </ol>
     </li>
     <li>
         Connect supply hose from the hopper / hose adapter to the fuel valve routing through the 1.5 inch hole in the belly skin with a MS35489-135 grommet.  Secure lines where required and able with cable ties.
+        <figure>
+            <img class="imageCentered_6x6" src="img/img_FerryFuelSupplyHose.png">
+            <figcaption class="centerText">Supply Hose Installation</figcaption>
+        </figure>
     </li>
     <li>
         Mark fuel valve handle position for ferry fuel.  Placard position depends on fuel valve type.  For 802-102 and subsequent with AVI valve, install placard on cockpit side skin.  Contact Air Tractor customer support otherwise. 
@@ -83,7 +91,11 @@
         </figure>
     </li>
     <li>
-        If desired, or required, install hopper lid fuel cap by cutting a 3.5 inch hole in the hopper lid and installing filler cap with 12 AN4C6A bolts, AN960C4 washers and MS21044C4 nuts.  Install 416-50 retention chain betwwen filler cap and cap installation bolt as shown.  Seal all around inside of cap with PR-1422 sealant.
+        If desired, or required, install hopper lid fuel cap by cutting a 3.5 inch hole in the hopper lid and installing 416-3B-2 Adapter and 416-50 cap.  Install the fuel cap by using the adapter as a guide to drill .257 holes through the hopper top.  Install with 12 AN4C6A bolts, AN960C4 washers and MS21044C4 nuts.  Install 416-50 retention chain between filler cap and bolt as shown.  Seal all around inside of cap with PR-1422 sealant.
+        <figure>
+            <img class="imageCentered_6x6" src="img/img_FerryFuelCap.png">
+            <figcaption class="centerText">Fuel Cap Installation</figcaption>
+        </figure>  
     </li>
     <li>
         Coat all of the 80158 vent hoses and attaching clamps that are located inside the hopper with PR-1422 sealant to prevent fuel from getting to the hoses. 
