--- a/html/Inspection/Insp_POWER AND PROPELLER SPEED COORDINATING SYSTEM.html
+++ b/html/Inspection/Insp_POWER AND PROPELLER SPEED COORDINATING SYSTEM.html
@@ -1,7 +1,12 @@
 <table class="tableInspections">
-    <tr>
+  <tr>
     <td class="cellInspectionNumber">PPS1</td>
     <td class="cellInspectionInterval">(12 Months)</td>
     <td class="cellInspectionText">Check engine rigging as called out in Engine Manuals. (Or more frequent intervals if required).</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">PPS2</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">If equipped, inspect Kawak Throttle Quadrant per Kawak Manual KATI-MM-948.</td>
   </tr>
 </table>
