--- a/html/Inspection/Insp_ELECTRICAL SYSTEM.html
+++ b/html/Inspection/Insp_ELECTRICAL SYSTEM.html
@@ -42,6 +42,6 @@
    <tr>
     <td class="cellInspectionNumber">ES9</td>
     <td class="cellInspectionInterval">(200-300)</td>
-    <td class="cellInspectionText">Inspect and clean the starter generator and brushes per Service Letter #212 <xref fileTarget="html/Maintenance/Starter Generator Brush Inspection.html" prependLabel="Section"></xref>.</td>
+    <td class="cellInspectionText">Inspect and clean the starter generator and brushes per <xref fileTarget="html/Maintenance/Starter Generator Brush Inspection.html" prependLabel="Section"></xref>.</td>
   </tr>
 </table>
