--- a/html/Maintenance/Propeller Overspeed Solenoid.html
+++ b/html/Maintenance/Propeller Overspeed Solenoid.html
@@ -1,1 +1,9 @@
-<p style=" color: red;"> CONTENT NOT CREATED </p>
+
+<p>The propeller overspeed solenoid provides is used to test the functionality of th propeller overspeed governor.  The system is operated with a switch that is installed on the lower panel.</p>
+<p>The schematic for this system is shown in <xref fileTarget="img_PropOverspeedSolenoidSchematic.png"  xrefType="link", prependLabel="Section">Cross Reference Placeholder</xref>.</p>
+
+
+<figure>
+    <img class="imageCentered_6x4" src="img/img_PropOverspeedSolenoidSchematic.png">
+    <figcaption class="centerText">Propeller Overspeed Solenoid Schematic</figcaption>
+</figure>
