flap inspection updates including AD

--- a/html/Inspection/Insp_CONTROL SYSTEM.html
+++ b/html/Inspection/Insp_CONTROL SYSTEM.html
@@ -25,16 +25,6 @@
     <td class="cellInspectionText">Check for missing neoprene washers at aileron and elevator stops.</td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">CS6</td>
-    <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Cycle flaps and listen for unusual rubbing noises.  Check that flaps do not exceed marking in down position.</td>
-  </tr>
-  <tr>
-    <td class="cellInspectionNumber">CS7</td>
-    <td class="cellInspectionInterval">(300)</td>
-    <td class="cellInspectionText">Check rubber coupling in flap motor connection. Check for loose wires around flap actuator.</td>
-  </tr>
-  <tr>
     <td class="cellInspectionNumber">CS8</td>
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">Check all trim/boost tabs for excessive free play.</td>
@@ -52,7 +42,7 @@
   <tr>
     <td class="cellInspectionNumber">CS11</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Inspect torque tube for cracks, proper attachment, bearing condition.</td>
+    <td class="cellInspectionText">Inspect aileron torque tube for cracks, proper attachment, bearing condition.</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">CS12</td>
@@ -63,16 +53,6 @@
     <td class="cellInspectionNumber">CS13</td>
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">Check elevator downspring in control system in aft fuselage for breakage or wear in 	spring ends.</td>
-  </tr>
-  <tr>
-    <td class="cellInspectionNumber">CS14</td>
-    <td class="cellInspectionInterval">(300)</td>
-    <td class="cellInspectionText">Visually inspect the flap actuator attachment plates on the flap torque tube per SL 347.</td>
-  </tr>
-  <tr>
-    <td class="cellInspectionNumber">CS15</td>
-    <td class="cellInspectionInterval">(900)</td>
-    <td class="cellInspectionText">Perform a dye penetrant inspection of the flap actuator attachment plates on the flap torque tube per SL 347.</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">CS16</td>
