--- a/html/Maintenance/Suggested Time Limits.html
+++ b/html/Maintenance/Suggested Time Limits.html
@@ -9,6 +9,12 @@
         <th class="plainTableHeaderCell">Reference</tr>
     </tr>
     <tr>
+        <td class="plainTableNormalCell">B100-6</td>
+        <td class="plainTableNormalCell">Flap Motor Coupling</td>
+        <td class="plainTableNormalCell">300 hours</td>
+        <td class="plainTableNormalCell"><xref sectionTarget="2.70.11" xrefType="link", prependLabel="Section">Cross Reference Placeholder</xref></td>
+    </tr>
+    <tr>
         <td class="plainTableNormalCell">TODO</td>
         <td class="plainTableNormalCell">Propeller Overhaul</td>
         <td class="plainTableNormalCell">per Hartzell</td>
