--- a/html/Inspection/Insp_FLAPS.html
+++ b/html/Inspection/Insp_FLAPS.html
@@ -1,44 +1,97 @@
 <table class="tableInspections">
-    <tr>
+  <tr>
     <td class="cellInspectionNumber">F1</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">With flaps full down, move ailerons through full travel to check clearance between flap and aileron push-rods.</td>
+    <td class="cellInspectionText">With flaps full down, move ailerons through full travel to check clearance between
+      flap and aileron push-rods.</td>
   </tr>
-<tr>
+  <tr>
     <td class="cellInspectionNumber">F2</td>
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">Inspect all skins, spar, and ribs for cracks, loose rivets, or corrosion.</td>
-  </tr><tr>
+  </tr>
+  <tr>
     <td class="cellInspectionNumber">F3</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Check condition of steel hinges and attachments to spar.  (Reference S/L #216).</td>
-  </tr><tr>
-    <td class="cellInspectionNumber">F4</td>
-    <td class="cellInspectionInterval">(400)</td>
-    <td class="cellInspectionText">Inspect flap actuator shaft, bushing and bearing for wear, per S.I.L. #802-0021A.  Significant wear requires replacement of parts or the complete actuator and is defined as ½" or more of flap trailing edge movement with moderate hand pressure on the trailing edge.</td>
-  </tr><tr>
-    <td class="cellInspectionNumber">F5</td>
-    <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Inspect flap push-rods for bearing alignment, dragging on other parts, freedom of movement.</td>
-  </tr><tr>
-    <td class="cellInspectionNumber">F6</td>
-    <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Check flap travel and rigging. (See <xref sectionTarget="2.70.3" prependLabel="Section"></xref>)</td>
-  </tr><tr>
-    <td class="cellInspectionNumber">F7</td>
-    <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Check flap pushrod bolt for straightness. (See <xref sectionTarget="2.70" prependLabel="Section"></xref>.)</td>
-  </tr><tr>
-    <td class="cellInspectionNumber">F8</td>
-    <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Inspect flap actuator and mount for security, cracks, and for proper operation.  If you have p/n 71112-1 actuator, also inspect for fluid leaks and worn motor brushes.</td>
-  </tr><tr>
+    <td class="cellInspectionText">Check condition of steel hinges and attachments to spar. (Reference S/L #216).</td>
+  </tr>
+
+  <tr>
+    <td class="cellInspectionNumber">CS6</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Cycle flaps and listen for unusual rubbing noises. Check that flaps do not exceed
+      marking in down position.</td>
+  </tr>
+  <tr>
     <td class="cellInspectionNumber">F9</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Inspect for flap actuator gear shaft axial play (if equipped with C100168-4 flap actuator).<td>
-  </tr><tr>
+    <td class="cellInspectionText">Inspect for flap actuator gear shaft axial play (if equipped with C100168-4 flap
+      actuator).
+    <td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">FXXXX</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Check rubber coupling in flap motor connection per <xref xref sectionTarget="2.70.11"
+        prependLabel="Section"></xref>.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">CS7</td>
+    <td class="cellInspectionInterval">(300)</td>
+    <td class="cellInspectionText">Check rubber coupling in flap motor connection per <xref xref sectionTarget="2.70.11"
+        prependLabel="Section"></xref>. Check for loose wires around flap
+      actuator.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">CS14</td>
+    <td class="cellInspectionInterval">(300)</td>
+    <td class="cellInspectionText">Visually inspect the flap actuator attachment plates on the flap torque tube per SL
+      347 and AD 2021-05-14 and <xref xref sectionTarget="2.70.12"
+        prependLabel="Section"></xref>.</td>
+  </tr>
+
+  <!-- <tr>
+    <td class="cellInspectionNumber">F4</td>
+    <td class="cellInspectionInterval">(400)</td>
+    <td class="cellInspectionText">Inspect flap actuator shaft, bushing and bearing for wear, per S.I.L. #802-0021A.
+      Significant wear requires replacement of parts or the complete actuator and is defined as ½" or more of flap
+      trailing edge movement with moderate hand pressure on the trailing edge.</td>
+  </tr> -->
+  <tr>
+    <td class="cellInspectionNumber">CS15</td>
+    <td class="cellInspectionInterval">(900)</td>
+    <td class="cellInspectionText">Perform a dye penetrant inspection of the flap actuator attachment plates on the flap
+      torque tube per SL 347 and AD 2021-05-14 and <xref xref sectionTarget="2.70.12"
+        prependLabel="Section"></xref>.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">F5</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Inspect flap push-rods for bearing alignment, dragging on other parts, freedom of
+      movement.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">F6</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Check flap travel and rigging. (See <xref sectionTarget="2.70.3"
+        prependLabel="Section"></xref>)</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">F7</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Check flap pushrod bolt for straightness.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">F8</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Inspect flap actuator and mount for security, cracks, and for proper operation. If
+      you have p/n 71112-1 actuator, also inspect for fluid leaks and worn motor brushes.</td>
+  </tr>
+
+  <!-- <tr>
     <td class="cellInspectionNumber">F10</td>
     <td class="cellInspectionInterval">(400)</td>
-    <td class="cellInspectionText">Inspect condition of rubber flap actuator coupling per Service Letter #260.<td>
-  </tr>
+    <td class="cellInspectionText">Inspect condition of rubber flap actuator coupling per Service Letter #260.
+    <td>
+  </tr> -->
 </table>
