--- a/html/Description/Starter Generator System.html
+++ b/html/Description/Starter Generator System.html
@@ -1,5 +1,4 @@
-<p>The Lucas p/n 23048-028 250-Amp, 28-Volt starter -generator (SG) is standard in the AT-802 and AT-802A. It uses a p/n
-    23046-521 QAD mounting kit. The Lucas p/n 23048-02 300-amp, 28-Volt starter-generator is optional.</p>
+<p>The Skurka p/n 250SG11W or Lucas p/n 23048-028 250-Amp, 28-Volt starter -generator (SG) is standard in the AT-802 and AT-802A.  The Skurka p/n 300SGL153Q-1 or p/n 23048-02 300-amp, 28-Volt starter-generator is optional.</p>
 <p>The starter-generator system produces and controls all electrical power for the aircraft. It works with the system's
     batteries and generator-control unit (GCU) to power the electrical buses. All electrical sub-systems receive their
     power from buses that are fed by the starter-generator system.</p>
