cleaning up flap inspections

--- a/html/Inspection/Insp_FLAPS.html
+++ b/html/Inspection/Insp_FLAPS.html
@@ -25,8 +25,8 @@
   <tr>
     <td class="cellInspectionNumber">F5</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Inspect for flap actuator gear shaft axial play (if equipped with C100168-4 flap
-      actuator).
+    <td class="cellInspectionText">Inspect for flap actuator free play per <xref xref sectionTarget="2.70.13"
+        prependLabel="Section"></xref> and SL338.
     <td>
   </tr>
   <tr>
