--- a/html/Maintenance/Flap Actuator.html
+++ b/html/Maintenance/Flap Actuator.html
@@ -1,79 +1,67 @@
-
-
 <b>Commercial Aircraft Products C100168-4 Actuator:</b>
 
 <p>The actuator assembly has a threaded collar. This collar is threaded internally to match the threads on the worm
-       drive threads of the actuator, and it is threaded externally to match the threads of the Air Tractor Tee
-       assembly, which is p/n 70037-1. The Tee assembly is attached to the two 1/4" thick aluminum 70581-1 arm
-       assemblies that are bolted to the flap torque tube assembly. The Tee assembly has a steel grease shield and cap
-       attached. The shield is p/n 70039-2 and is attached to the Tee with two AN500A5-3 screws. Be sure the lock
-       washers are under the head of the AN500A5-3 screws. The cap is a 1 1/8 SC Caplug attached to the shield with a
-       TY-525 Tyrap. </p>
+  drive threads of the actuator, and it is threaded externally to match the threads of the Air Tractor Tee
+  assembly, which is p/n 70037-1. The Tee assembly is attached to the two 1/4" thick aluminum 70581-1 arm
+  assemblies that are bolted to the flap torque tube assembly. The Tee assembly has a steel grease shield and cap
+  attached. The shield is p/n 70039-2 and is attached to the Tee with two AN500A5-3 screws. Be sure the lock
+  washers are under the head of the AN500A5-3 screws. The cap is a 1 1/8 SC Caplug attached to the shield with a
+  TY-525 Tyrap. </p>
 
 <p>The Tee assembly that screws into the Threaded collar has a AN5675 D6H4 set screw that is located on the top surface
-       of the Tee. The threaded collar has a large diameter rounded surface and just forward is a smaller diameter part
-       on the collar that is to be used for tightening the collar against the Tee. Whenever it is necessary to remove
-       the flap actuator, the factory practice is to be first loosen the set screw in the Tee assembly with a small
-       Allen wrench, then place a soft rag or duct tape on the small diameter of the threaded collar so as not to
-       scratch the finish and with a pair of water-pump pliers or vise-grips, break loose the connection between the
-       threaded collar and the Tee assembly. Then the threaded collar can be screwed by hand from the Tee. Be careful
-       not to dent or scratch the finish of the ball nut as small dents will interfere with the action of the balls
-       inside.</p>
-
-       <p>There is a potentially dangerous condition that may develop due to the cracking and separation of the flap motor mounting studs.</p>
-       <ul>
-              <li>Locate the flap actuator and inspect the flap motor for security. Ensure that both flap motor attachment studs are in place and that the studs are not cracked. See <xref fileTarget="img_Fig_27A.png" xrefType="link">Fig Cross Reference</xref></li>
-              <li>To inspect for cracks, remove the nut and washer and visually inspect. </li>
-              <li>If a cracked or broken stud is found: install new AN565A1032H16 studs per Section 6 of Service Letter #375</li>
-       </ul>
-
-       <p>There have been occasional problems with the electric-flap system relays. The majority of the problems have been relays with burnt contacts. Ag flying, using flaps in turns, is very demanding on the flap system. In a typical hour of ag flying the flap system may be actuated 50 or more times.</p>
-
-       <p>To solve this problem Air Tractor introduced a new heavy duty relay during 1999. These new relays are built by the Kissling Co. The part number of the new relay is 29.221.12. These relays are hermetically sealed and have heavy duty contacts to prevent arcing and burning. </p>
-
-       <p>To install the updated relays in your aircraft, refer to Service Letter #184.</p>
+  of the Tee. The threaded collar has a large diameter rounded surface and just forward is a smaller diameter part
+  on the collar that is to be used for tightening the collar against the Tee. Whenever it is necessary to remove
+  the flap actuator, the factory practice is to be first loosen the set screw in the Tee assembly with a small
+  Allen wrench, then place a soft rag or duct tape on the small diameter of the threaded collar so as not to
+  scratch the finish and with a pair of water-pump pliers or vise-grips, break loose the connection between the
+  threaded collar and the Tee assembly. Then the threaded collar can be screwed by hand from the Tee. Be careful
+  not to dent or scratch the finish of the ball nut as small dents will interfere with the action of the balls
+  inside.</p>
 
 <b>Air Tractor 71112-1 Actuator</b>
 
 <p>The actuator assembly attaches to the fuselage frame via a clamp. The actuator is attached to this clamp with an
-       AN4-14A bolt. At this connection there is also a 70026-3 spacer bushing and a Bunting P37-8 bronze bushing. If
-       the actuator is replaced or removed, be sure both bushings are in place.</p>
+  AN4-14A bolt. At this connection there is also a 70026-3 spacer bushing and a Bunting P37-8 bronze bushing. If
+  the actuator is replaced or removed, be sure both bushings are in place.</p>
 
 <p>The actuator assembly has a 1-inch diameter ball screw shaft. A ball nut moves along this shaft. The 71149-1 yoke
-       (tee) assembly is fitted on the ball nut and held in place with the 71152-1 yoke nut assembly. This yoke nut
-       includes a steel grease shield and is secured on the ball nut with two 90289A338 set screws. The yoke assembly is
-       attached to two 1/4" thick aluminum 70032-1 arm assemblies that are bolted with four AN4-7A bolts to the flap
-       torque tube assembly. See <xref fileTarget="img_Fig_27B.png" xrefType="link">Fig Cross Reference</xref>, <xref fileTarget="img_Fig_27C.png" xrefType="link">Fig Cross Reference</xref>, and <xref fileTarget="img_Fig_27A.png" xrefType="link">Fig Cross Reference</xref> below. </p>
+  (tee) assembly is fitted on the ball nut and held in place with the 71152-1 yoke nut assembly. This yoke nut
+  includes a steel grease shield and is secured on the ball nut with two 90289A338 set screws. The yoke assembly is
+  attached to two 1/4" thick aluminum 70032-1 arm assemblies that are bolted with four AN4-7A bolts to the flap
+  torque tube assembly. See <xref fileTarget="img_Fig_27B.png" xrefType="link">Fig Cross Reference</xref>, <xref
+    fileTarget="img_Fig_27C.png" xrefType="link">Fig Cross Reference</xref>, and <xref fileTarget="img_Fig_27A.png"
+    xrefType="link">Fig Cross Reference</xref> below. </p>
 
-       <div class='boxCautionLarge'>
-              <p class='boxCautionLargeHeader'>CAUTION</p>
-              <p class='boxCautionLargeText'>Have someone hold up on the flap trailing edge so the flaps will not fall down
-                     against the boom hangers.</p>
-       </div>
+<div class='boxCautionLarge'>
+  <p class='boxCautionLargeHeader'>CAUTION</p>
+  <p class='boxCautionLargeText'>Have someone hold up on the flap trailing edge so the flaps will not fall down
+    against the boom hangers.</p>
+</div>
 <figure>
- <img class="imageCentered_6x4" src="img/img_Fig_27B.png">
- <figcaption class="centerText">Flap Actuator - Worm Shaft</figcaption>
- </figure>
-
-<figure>
-    <img class="imageCentered_6x4" src="img/img_Fig_27C.png">
-    <figcaption class="centerText">Flap Actuator - Actuator Shaft</figcaption>
+  <img class="imageCentered_6x4" src="img/img_Fig_27B.png">
+  <figcaption class="centerText">Flap Actuator - Worm Shaft</figcaption>
 </figure>
 
 <figure>
- <img class="imageCentered_6x4" src="img/img_Fig_27A.png">
- <figcaption class="centerText">Flap Actuator - Gearbox Assembly</figcaption>
+  <img class="imageCentered_6x4" src="img/img_Fig_27C.png">
+  <figcaption class="centerText">Flap Actuator - Actuator Shaft</figcaption>
+</figure>
+
+<figure>
+  <img class="imageCentered_6x4" src="img/img_Fig_27A.png">
+  <figcaption class="centerText">Flap Actuator - Gearbox Assembly</figcaption>
 </figure>
 
 
 
-<p>See <xref sectionTarget="2.70.8" prependLabel="Section"></xref> for a step-by-step procedure for removing the actuator assembly from the aircraft. </p>
+<p>See <xref sectionTarget="2.70.8" prependLabel="Section"></xref> for a step-by-step procedure for removing the
+  actuator assembly from the aircraft. </p>
 <p>All wires from the flap actuator assembly have Wristlock connections so that it is not necessary to cut or splice
-       wires when the actuator is removed. Also, it is possible to replace the motor without removing the actuator
-       assembly. </p>
+  wires when the actuator is removed. Also, it is possible to replace the motor without removing the actuator
+  assembly. </p>
 <p>All wires from the flap actuator assembly have Wristlock connections so that it is not necessary to cut or splice
-       wires when the actuator is removed. Also, it is possible to replace the motor without removing the actuator
-       assembly. </p>
+  wires when the actuator is removed. Also, it is possible to replace the motor without removing the actuator
+  assembly. </p>
 
 
 <b>Air Tractor 71112-1 Flap Actuator Overhaul</b>
@@ -209,4 +197,4 @@
   <li>Rebuild the 71148-1 worm shaft per Drawing 71148, replacing all discarded parts with new parts. Inspect.</li>
   <li>Inspect the 71125-1 gearbox and P37-8 bushing for serviceability. Discard and replace unserviceable parts.</li>
   <li>Rebuild the actuator per Drawing 71112, replacing all discarded parts with new parts.</li>
-</ol>      
+</ol>
