--- a/html/Maintenance/Flap Torque Tube Attachment.html
+++ b/html/Maintenance/Flap Torque Tube Attachment.html
@@ -19,8 +19,8 @@
 
 
 <ul>
-    <li>If the airplane is new or has not previously complied with SL347 and AD 2021-05-14, within 300 ±4 5 hours you
-        must perform a dye penetrant inspection of each flap torque tube actuator attachment bracket.</li>
+    <li>If the airplane is new or has not previously complied with SL347 and AD 2021-05-14, within 300 hours you
+        must perform an initial dye penetrant inspection of each flap torque tube actuator attachment bracket.</li>
     <li>After the first dye penetrant inspection, the attachment brackets must be visually inspected every 300 ± 45
         hours.</li>
     <li>After the first dye penetrant inspection, the attachment brackets must be dye penetrant inspected every 900
@@ -93,7 +93,7 @@
 
 <table>
     <tr>
-        <td class="cellInspectionNumber cellWidth1_0"></td>
+        <td class="cellInspectionNumber cellWidth1_0">4(B)(1)</td>
         <td>
             Complete steps 4(A)(1) and 4(A)(2) from above.
             Note: AD 2015-05-14 does not require this step to be completed however Air Tractor recommends you remove the
