--- a/html/Maintenance/Suggested Time Limits.html
+++ b/html/Maintenance/Suggested Time Limits.html
@@ -76,7 +76,7 @@
     </tr>
 </table>
 
-<p>Suggested replacement intervals are provided for the following components but Air Tractor suggests they be replaced at more frequent intervals if the airplane is operated in a more severe manner such as for rice operations. </p>
+<p>Recommended replacement intervals are provided for the following components but Air Tractor suggests they be replaced at more frequent intervals if the airplane is operated in a more severe manner such as for rice operations. </p>
 <table class="plainTableLarge">
     <tr>
         <th class="plainTableHeaderCell">Part Number</th>
