--- a/html/Maintenance/TIME LIMITED PARTS.html
+++ b/html/Maintenance/TIME LIMITED PARTS.html
@@ -6,5 +6,5 @@
         <li>Recommended Time Limits Section of this Manual</li>
         <li>Suggested Time Limits Section of this Manual</li>
     </ol>
-    
+    <p>None of these recommendations or suggestions override the need for condition inspections and replacement of items should it be needed.  If a required item is noticed to be in unserviceable condition prior to a recommended or suggested replacement interval, replace it!</p>
 </div>
