--- a/html/Maintenance/Recommended Time Limits.html
+++ b/html/Maintenance/Recommended Time Limits.html
@@ -7,6 +7,12 @@
         <th class="plainTableHeaderCell">Reference</tr>
     </tr>
     <tr>
+        <td class="plainTableNormalCell">30775-1</td>
+        <td class="plainTableNormalCell">Overhaul Flap Actuator</td>
+        <td class="plainTableNormalCell">400 Hours</td>
+        <td class="plainTableNormalCell">SIL 802-0024, </td>
+    </tr>
+    <tr>
         <td class="plainTableNormalCell">NAS156A129</td>
         <td class="plainTableNormalCell">Fwd Main Gear Clamp Block</td>
         <td class="plainTableNormalCell">3000 Hours</td>
