--- a/html/Maintenance/Fuel System Drains.html
+++ b/html/Maintenance/Fuel System Drains.html
@@ -1,6 +1,10 @@
-<p>Refer to <xref fileTarget="img_Fig_51.png" xrefType="link">Fig Cross Reference</xref> for the location of the fuel tank and header tank drains. These drains are designated for daily activation during the pilot's walk-around inspection as shown in the AIRPLANE FLIGHT MANUAL. </p>
+<p>Refer to <xref fileTarget="img_Fig_47.png" xrefType="link">Fig Cross Reference</xref> for the location of the fuel tank and header tank drains. These drains are designated for daily activation during the pilot's walk-around inspection as shown in the AIRPLANE FLIGHT MANUAL. </p>
 
 
+<!-- <figure>
+    <img class="imageCentered_5x4" src="img/img_Fig_47.png">
+    <figcaption class="centerText">Wing and Header Tank Drains</figcaption>
+</figure> -->
 
 <p>The wing tanks have Curtis CCA-1650 drain valves and the header tank and the header tank has a Curtis 39000 drain valve. If the valves leak, remove them and check the seals for nicks and look for trash between the seal and the valve seat. Apply some 3H Permatex or equivalent to the threads of all drains before they are re-installed. If the seal is bad, replace the valve. </p>
 
