ferry fuel edit

--- a/html/Maintenance/Ferry Fuel System.html
+++ b/html/Maintenance/Ferry Fuel System.html
@@ -32,7 +32,7 @@
         </figure>
     </li>
     <li>
-        Drill 1.5 inch hole in belly skin at the location shown below.
+        Drill 1.5 inch hole in belly skin at the location shown below. 
         <figure>
             <img class="imageCentered_4x4" src="img/img_FerryFuelBottomSkinHole.png">
             <figcaption class="centerText">Location of Hole in Belly Skin</figcaption>
@@ -41,7 +41,7 @@
     <li>
         Disconnect hopper rinse line at the point that it enters the hopper or adapter. Install 51260-1 hose on line
         that does not have hose. Install 51887-1 plugs into end of each hose (2). Secure hose and plugs with WS200M16S
-        clamps. Secure lines as required with cable ties.
+        clamps. Secure lines as required with cable ties. Do not tie off to E-Dump controls. 
     </li>
     <li>
         Build up plug / adapter and pickup hose assembly.      
@@ -107,6 +107,9 @@
         Allow all sealant to cure for at least 12 hours before flight.
     </li>
     <li>
+        Test by filling hopper full and check for leaks. 30-45 minutes.
+    </li>
+    <li>
         Make a logbook entry stating that the ferry fuel system has been installed as a "TEMPORARY INSTALLATION FOR
         FERRY FLIGHT ONLY. MUST BE REMOVED BEFORE RESTRICTED OPERATION RESUMED."
     </li>
@@ -118,7 +121,7 @@
         Turn fuel valve pointer to off position.
     </li>
     <li>
-        Remove hose and fitting at fuel valve and install plug.
+        Remove hose and fitting at fuel valve and install plug. Cap and hole plug will be zip tied to hose from factory.
     </li>
     <li>
         Replace inspection cover in belly skin. Remove coupler, fittings, screen and filter from
