updated per Kyle

--- a/html/Maintenance/Ferry Fuel System.html
+++ b/html/Maintenance/Ferry Fuel System.html
@@ -1,6 +1,6 @@
 <p>
-    The ferry fuel system utilizes the hopper as a fuel tank (see <xref fileTarget="img_Fig_22.png" xrefType="link">Fig
-        Cross Reference</xref>) and is not an FAA Certificated fuel system. However, it may be installed provided a
+    The ferry fuel system utilizes the hopper as a temporary fuel tank (see <xref fileTarget="img_Fig_22.png" xrefType="link">Fig
+        Cross Reference</xref>) and is not an FAA Certificated fuel system. However, it may be installed for use during ferry flights provided a
     logbook entry is made for both the installation and removal.
 </p>
 
@@ -69,11 +69,11 @@
             </li>
             <li>
                 Secure 80376-2 adapter hose onto gatebox tube with two Q200M56S clamps.
-                <figure>
-                    <img class="imageCentered_6x6" src="img/img_FerryFuelGateboxTubeInstallation.png">
-                    <figcaption class="centerText">Gatebox Tube Installation</figcaption>
-                </figure>
             </li>
+            <figure>
+                <img class="imageCentered_6x6" src="img/img_FerryFuelGateboxTubeInstallation.png">
+                <figcaption class="centerText">Gatebox Tube Installation</figcaption>
+            </figure>   
         </ol>
     </li>
     <li>
