--- a/html/Maintenance/Fuel System Screens and Filters.html
+++ b/html/Maintenance/Fuel System Screens and Filters.html
@@ -1,35 +1,123 @@
-<p>Each wing tank has a finger strainer soldered to the 90° elbow at the tank outlet. This screen should be removed and cleaned at least once a year during the 12-month inspection. </p>
-
-<p>Remove the finger-strainer screen from each wing tank as follows: </p>
-
-<ol type="1">
-    <li>Defuel both wing tanks by use of the valve outlet in the header tank.</li>
-
-    <li>Remove the hose-end fitting from the elbow fitting that enter the fuel cell through the inboard rib of the wing. </li>
-
-    <li>Remove the elbow fitting from the tank. The strainer screen is part of the elbow fitting.</li>
-</ol>
-
-<p>After inspection and cleaning, the strainer and its fittings may be replaced by reversing the steps shown above. The threads of the elbow fitting should be cleaned and re-coated with RectorSeal 5 or equivalent fuel-resistant pipe-thread sealer. </p>
-
-<p>The firewall fuel filter is shown in <xref fileTarget="img_Fig_46.png" xrefType="link">Fig Cross Reference</xref>. This fuel filter may be a Fram FS1133-PLM fuel filter or an Air Tractor p/n 53114-2 fuel filter. Both fuel filters use the Air Tractor p/n 52351-1 fuel filter element.  Inspection and maintenance procedures for both fuel filters are almost identical.  The filter should be cleaned and inspected for general condition in accordance with Service Letter #229 (Fram FS1133-PLM fuel filter) or Service Letter #229A (Air Tractor p/n 53114-1 fuel filter). </p>
-
-<p>It is possible for the fuel filter canister to allow tiny air bubbles to enter the engine fuel control unit (FCU) if not properly sealed. Air bubbles entering the FCU could cause the engine to lose power or flame out completely.</p>
-
-<p>To prevent this the sealing washers, both copper and rubber, of the fuel filter canister should be replaced each time the canister is opened.</p>
-
-<p>The seal of the fuel filter canister can be checked by pressuring it up with the fuel boost pump.</p>
-
-<ol type=‘1’>
-    <li>Ensure that the fuel filter canister is clean and dry.</li>
-    <li>While visually inspecting the canister have a qualified person turn on the fuel boost pump for approximately 30 seconds. The operator should note that the fuel pressure gauge indicates approximately 20 psi. while the boost pump is operating.</li>
-    <li>While the fuel pump is running, and after it is turned off, look carefully for fuel leaks. Pay special attention to the area on top of the canister adjacent to the through bolt head and copper washer and to the area around the rubber sealing washer. Other areas to check are the plug in the head of the through bolt and the plug or quick drain valve in the bottom of the canister.</li>
-    <li>If fuel leaks are found double check the torque on the through bolt. If this does not resolve the leak the sealing washer should be replaced again.</li>
-</ol>
-
-<p>Air Tractor has been informed that an aircraft was delivered with the fuel filter inlet and outlet lines reversed. This could have happened on other aircraft during the production sequence.
+<p>
+    Each wing tank has a finger strainer soldered to the 90° elbow at the tank outlet. This screen should be removed and cleaned at least once a year during the 12-month inspection.
 </p>
 
-<p>Inspect your aircraft to see if the fuel hose from the fuel selector valve which passes through the firewall is connected to the IN port of the fuel filter. The hose from the OUT port of the fuel filter should route to the engine driven fuel pump. If the fuel lines are properly plumbed as described nothing more is required. Refer to Service Letter #137 and Service Letter #174 for additional information.</p>
+<p>
+    Remove the finger-strainer screen from each wing tank as follows:
+</p>
 
-<p>Aircraft with serial numbers prior to 802-0715 and 802-4001 thru 802-4031 and that are equipped with a P/N 53114-1 fuel filter may have the lower cowling skin come in contact with the existing drain valve on the filter. This contact may be enough to push the valve tang up and open the valve. In turn, this action may result in a temporary drop in fuel pressure. Refer to Service Letter #314 for a remedy to this possibility.</p>
+<ol>
+    <li>
+        De-fuel both wing tanks by use of the valve outlet in the header tank.
+    </li>
+    <li>
+        Remove the hose-end fitting from the elbow fitting that enters the fuel cell through the inboard rib of the wing.
+    </li>
+    <li>
+        Remove the elbow fitting from the tank. The strainer screen is part of the elbow fitting.
+    </li>
+</ol>
+
+<p>
+    After inspection and cleaning, the strainer and its fittings may be replaced by reversing the steps shown above. The threads of the elbow fitting should be cleaned and re-coated with RectorSeal 5 or equivalent fuel-resistant pipe-thread sealer.
+</p>
+
+<p>
+    The firewall fuel filter is shown in <xref fileTarget="img_FirewallFuelFilter.png" xrefType="link">Cross Reference Placeholder</xref>. This fuel filter may be an Air Tractor p/n 53562-1, 53114-2, or a Fram FS1133-PLM fuel filter. These fuel filters use the Air Tractor p/n 52351-1 fuel filter element. Inspection and maintenance procedures for the fuel filters are almost identical. The filter should be cleaned and inspected for general condition every 100 hours TIS.  The procedure below is a comprehensive procedure that specifies where each filter is different from the others. The maintenance and inspections below were preciously included in Service letters SL229 and SL229A.
+</p>
+
+<figure>
+    <img class="imageCentered_4x4" src="img/img_FirewallFuelFilter.png">
+    <figcaption class="centerText">Firewall Fuel Filter</figcaption>
+</figure>
+
+<p>
+    The Air Tractor p/n 52351-1 fuel filter element should be cleaned and inspected for general condition every 100 hours TIS as follows:
+</p>
+
+<ol>
+    <li>
+        Gain access to the firewall and fuel filter assembly. 
+    </li>
+    <li>
+        Drain fuel filter bowl using the drain at the bottom of the fuel bowl.  This will be a drain valve on the 53562-1 and 53114-2 fuel filters or a 1/8” NPT plug on the FS1133-PLM filters.
+    </li>
+    <li>
+        Remove safety wire. Loosen the center bolt on top of the fuel filter assembly. 
+    </li>
+    <li>
+        Remove metal bowl.
+    </li>
+    <li>
+        Check bowl for water, rust, and other contaminants. 
+    </li>
+    <li>
+        Clean fuel filter bowl using kerosene, Jet A, or mineral spirits. 
+    </li>
+    <li>
+        Fuel filter element inspection:
+        <ol type="A">
+            <li>
+                Remove the Air Tractor p/n 52351-1 fuel filter element. 
+            </li>
+            <li>
+                Clean filter with kerosene, Jet A, or mineral spirits. Contaminants will collect on the outside of the filter. Compressed air can be used (90 psi maximum) to loosen particles if necessary (blow from the center of the filter out). 
+            </li>
+            <li>
+                Inspect soldered seams and joints for security and seal. 
+            </li>
+            <li>
+                Inspect gaskets to ensure that they are firmly attached and in good condition. Gaskets shall be free of nicks or cuts and have a uniform flat sealing surface. 
+            </li>
+            <li>
+                Inspect element screen for holes, tears, or non-uniform weave. Screen mesh weave shall be uniform and show no signs of holes or tears. 
+            </li>
+            <li>
+                Inspect element for evidence of crushing damage. Measure length of filter with a tape or ruler. The length from metal surface to metal surface shall be 4 1/2 inches 1/16 inches. 
+            </li>
+            <li>
+                Any filter element that does not satisfactorily meet the condition inspection above should be discarded and replace with a new filter element. 
+            </li>
+        </ol>
+    </li>
+    <li>
+        Reassemble and install fuel filter assembly with new seal beneath cap (Fram p/n SP238629). 
+    </li>
+    <li>
+        Torque center bolt on top of fuel filter assembly to 12 - 14 ft.lbs. (144 - 168 in.lbs.). 
+    </li>
+    <li>
+        Install safety wire. 
+    </li>
+    <li>
+        Perform a leak check by running the electric boost pump. 
+    </li>
+</ol>
+
+<p>
+    When the fuel filter bowl has been removed for cartridge inspection it must be remembered that the fuel lines from the engine fuel control to the header tank have been drained, and these lines will be air-locked if a start is attempted without first priming the lines with fuel. Use the electric boost pump for this.
+</p>
+
+<p>
+    It is possible for the fuel filter canister to allow tiny air bubbles to enter the engine fuel control unit (FCU) if not properly sealed. Air bubbles entering the FCU could cause the engine to lose power or flame out completely.
+    To prevent this the sealing washers, both copper and rubber, of the fuel filter canister should be replaced each time the canister is opened.
+</p>
+
+<p>
+    The seal of the fuel filter canister can be checked by pressuring it up with the fuel boost pump.
+</p>
+
+<ol>
+    <li>
+        Ensure that the fuel filter canister is clean and dry.
+    </li>
+    <li>
+        While visually inspecting the canister, have a qualified person turn on the fuel boost pump for approximately 30 seconds. The operator should note that the fuel pressure gauge indicates approximately 20 psi. while the boost pump is operating.
+    </li>
+    <li>
+        While the fuel pump is running, and after it is turned off, look carefully for fuel leaks. Pay special attention to the area on top of the canister adjacent to the through bolt head and copper washer and to the area around the rubber sealing washer. Other areas to check are the plug in the head of the through bolt and the plug or quick drain valve in the bottom of the canister.
+    </li>
+    <li>
+        If fuel leaks are found double check the torque on the through bolt. If this does not resolve the leak the sealing washer should be replaced again.
+    </li>
+</ol>
