--- a/html/Maintenance/Oil Cooler Blower.html
+++ b/html/Maintenance/Oil Cooler Blower.html
@@ -1,1 +1,15 @@
-<p>The wiring schematic for the oil cooler blower is shown in Figure 44 with continuation on Figure 11. The Oil Cooler Blower is controlled by the propeller-governor switch and the beta switch. Whenever the propeller is feathered or in beta and the aircraft master switch on, the blower motor should run. </p>
+<p>
+    The wiring schematic for the oil cooler blower is shown in 
+    <xref fileTarget="img_OilCoolerBlowerSchematic.png" xrefType="link">Cross Reference Placeholder</xref>
+    with the control circuit shown in
+    <xref fileTarget="img_MvpBetaLightSchematics.png" xrefType="link">Cross Reference Placeholder</xref>
+    . 
+</p>
+<figure>
+    <img class="imageCentered_6x4" src="img/img_OilCoolerBlowerSchematic.png">
+    <figcaption class="centerText">Oil Cooler Blower Wiring Schematic</figcaption>
+</figure>
+
+<p>
+    The Oil Cooler Blower is controlled by the propeller-governor switch and the beta switch. Whenever the propeller is feathered or in beta and the aircraft master switch on, the blower motor should run.
+</p>
