--- a/html/Inspection/Insp_CONTROL SYSTEM.html
+++ b/html/Inspection/Insp_CONTROL SYSTEM.html
@@ -1,87 +1,109 @@
 <table class="tableInspections">
-    <tr>
+  <tr>
     <td class="cellInspectionNumber">CS1</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Check rudder cables for wear at pulley locations and at entrance to fuselage.  Check to see if cotter pin guard is installed per Service Letter #200.</td>
+    <td class="cellInspectionText">Check rudder cables for wear at pulley locations and at entrance to fuselage. Check
+      to see if cotter pin guard is installed per Service Letter #200.</td>
   </tr>
-<tr>
+  <tr>
     <td class="cellInspectionNumber">CS2</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Check tail wheel lock cable for wear at pulley and at entrance to fuselage. Check spring on end of lock cable for wear.</td>
+    <td class="cellInspectionText">Check tail wheel lock cable for wear at pulley and at entrance to fuselage. Check
+      spring on end of lock cable for wear.</td>
   </tr>
+
   <tr>
     <td class="cellInspectionNumber">CS3</td>
-    <td class="cellInspectionInterval">(300)</td>
-    <td class="cellInspectionText">Check all elevator pushrods and bellcranks for bearing condition, clearance to other parts, loose check nuts, end-play on bellcranks, wobble in idlers.</td>
-  </tr>
-  <tr>
-    <td class="cellInspectionNumber">CS4</td>
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">Check cockpit controls for end-play or slack.</td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">CS5</td>
+    <td class="cellInspectionNumber">CS4</td>
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">Check for missing neoprene washers at aileron and elevator stops.</td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">CS8</td>
+    <td class="cellInspectionNumber">CS5</td>
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">Check all trim/boost tabs for excessive free play.</td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">CS9</td>
+    <td class="cellInspectionNumber">CS6</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Read Maintenance Section on Rudder Controls, Elevator Controls, Cockpit Controls, and Trim Tab Controls and perform inspections called out in those sections.</td>
+    <td class="cellInspectionText">Read Maintenance Section on Rudder Controls, Elevator Controls, Cockpit Controls, and
+      Trim Tab Controls and perform inspections called out in those sections.</td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">CS10</td>
+    <td class="cellInspectionNumber">CS7</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Read Maintenance Section on Gate Box Controls, Spray Lever Controls and perform inspections called out in those sections.</td>
+    <td class="cellInspectionText">Read Maintenance Section on Gate Box Controls, Spray Lever Controls and perform
+      inspections called out in those sections.</td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">CS11</td>
+    <td class="cellInspectionNumber">CS8/td>
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">Inspect aileron torque tube for cracks, proper attachment, bearing condition.</td>
   </tr>
   <tr>
+    <td class="cellInspectionNumber">CS9</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Check all flight controls are free and correct with no chafing, jamming, or binding
+      through all possible combinations of control positions.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">CS10</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Check elevator downspring in control system in aft fuselage for breakage or wear in
+      spring ends.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">CS11</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Perform rudder control system inspection per Service Letter #77 and Service Letter
+      #317.</td>
+  </tr>
+  <tr>
     <td class="cellInspectionNumber">CS12</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Check all flight controls are free and correct with no chafing, jamming, or binding through all possible combinations of control positions.</td>
+    <td class="cellInspectionText"> Inspect upper and lower aileron torque tubes for cracks, proper attachment,
+      lubrication and bearing condition.</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">CS13</td>
-    <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Check elevator downspring in control system in aft fuselage for breakage or wear in 	spring ends.</td>
+    <td class="cellInspectionInterval">(300)</td>
+    <td class="cellInspectionText">Check all elevator pushrods and bellcranks for bearing condition, clearance to other
+      parts, loose check nuts, end-play on bellcranks, wobble in idlers.</td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">CS16</td>
+    <td class="cellInspectionNumber">CS14</td>
+    <td class="cellInspectionInterval">(2000)</td>
+    <td class="cellInspectionText">Inspect rudder pedals per <xref sectionTarget="2.30.7" prependLabel="Section">Cross Reference Placeholder</xref>.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">CS15</td>
     <td class="cellInspectionInterval">(12 Months)</td>
     <td class="cellInspectionText">Check for wear in the aluminum rudder adjustment channel.</td>
   </tr>
   <tr>
-    <td class="cellInspectionNumber">CS17</td>
+    <td class="cellInspectionNumber">CS16</td>
     <td class="cellInspectionInterval">(12 Months)</td>
     <td class="cellInspectionText">Check rudder pedal attach brackets and tube for cracks.</td>
   </tr>
   <tr>
+    <td class="cellInspectionNumber">CS17</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Check all aileron push-rods and bellcranks for bearing condition, clearance to other
+      parts, loose check nuts, end-play in bellcranks and weld condition. Weld beads on the bellcrank support assembly
+      should run the entire length.</td>
+  </tr>
+  <tr>
     <td class="cellInspectionNumber">CS18</td>
     <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Check all aileron push-rods and bellcranks for bearing condition, clearance to other parts, loose check nuts, end-play in bellcranks and weld condition. Weld beads on the bellcrank support assembly should run the entire length.</td>
+    <td class="cellInspectionText">Check elevator controls friction device for proper adjustment as described in <xref
+        sectionTarget="2.30.4" prependLabel="Section"></xref>. Check the diameter of the friction device wear ring on
+      the elevator control idler. The minimum diameter is 1.0 inch. Replace the idler if wear is excessive. (Aircraft
+      s/n 802-0376/-4004 and subs and aircraft modified in accordance with Service Information Letter #802-0090 do not
+      have the Friction Damper installed and this inspection does not apply).</td>
   </tr>
-  <tr>
-    <td class="cellInspectionNumber">CS19</td>
-    <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Check elevator controls friction device for proper adjustment as described in <xref sectionTarget="2.30.4" prependLabel="Section"></xref>.  Check the diameter of the friction device wear ring on the elevator control idler.  The minimum diameter is 1.0 inch.  Replace the idler if wear is excessive.  (Aircraft s/n 802-0376/-4004 and subs and aircraft modified in accordance with Service Information Letter #802-0090 do not have the Friction Damper installed and this inspection does not apply).</td>
-  </tr>
-  <tr>
-    <td class="cellInspectionNumber">CS20</td>
-    <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Perform rudder control system inspection per Service Letter #77 and Service Letter #317.</td>
-  </tr>
-  <tr>
-    <td class="cellInspectionNumber">CS21</td>
-    <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText"> Inspect upper and lower aileron torque tubes for cracks, proper attachment, lubrication and bearing condition.</td>
-  </tr>
+
 </table>
