typos and cleanup

--- a/html/Maintenance/Parking Brake.html
+++ b/html/Maintenance/Parking Brake.html
@@ -1,4 +1,4 @@
-<p>The parking brake valve sued on later Air Tractor's is a Scott p/n 4500A-2.  Two of these valves are mounted together with a common lever to pull the valve to the ON position.  O-Rings within the valves may be replaced when needed.  An exploded view of the parking-brake valve is shown below in <xref fileTarget="img_Fig_35.png" xrefType="link">Fig Cross Reference</xref>. </p>
+<p>The parking brake valve used on later Air Tractor's is a Scott p/n 4500A-2.  Two of these valves are mounted together with a common lever to pull the valve to the ON position.  O-Rings within the valves may be replaced when needed.  An exploded view of the parking-brake valve is shown below in <xref fileTarget="img_Fig_35.png" xrefType="link">Fig Cross Reference</xref>. </p>
 
 <figure>
     <img class="imageCentered_5x3" src="img/img_Fig_35.png">
