added missing sections

--- a/html/Maintenance/Checking the Batteries.html
+++ b/html/Maintenance/Checking the Batteries.html
@@ -1,9 +1,11 @@
 <p>Always wear protective clothing, rubber gloves, and a face shield when servicing batteries. The batteries are checked by determining the level of the electrolyte in each cell. First of all the battery caps are removed. Then each cell is inspected individually. Using a light if necessary, the electrolyte level should be observed at or slightly above the plastic split-ring that is visible through the filling hole. </p>
 
-<img class="imageCentered_3x2" src="img/imgTemplate_3x2.png">
-<p>Battery Cutout</p>
+<figure>
+    <img class="imageCentered_4x3" src="img/img_BatteryCuttaway.png">
+    <figcaption class="centerText">Battery Cutaway</figcaption>
+</figure>
 
-<p>If the electrolyte fluid level is low and adding fluid is necessary, the electrolyte level can be raised by adding distilled water. The battery should not be overfilled. The electrolyte level should not be more than one-quarter inch above the split ring. </p>
+<p>If the electrolyte fluid level is low and adding fluid is necessary, the electrolyte level can be raised by adding distilled water. The battery should not be overfilled. The electrolyte level should not be more than one-quarter inch above the split ring.</p>
 
 <p>When a battery seems weak or will not hold a charge after charging, replacing the battery may be necessary. The charge capacity of individual cells may be determined by checking the specific-gravity of the electrolyte in those cells. </p>
 
