--- a/html/Maintenance/ENGINE MAINTENANCE.html
+++ b/html/Maintenance/ENGINE MAINTENANCE.html
@@ -1,32 +1,7 @@
 <p>The Pratt & Whitney manuals are the current and best information by which owner should ensure that their engines are maintained with. These manuals supersedes anything that has been published by Air Tractor as it pertains to maintaining Pratt & Whitney PT6A engines.</p>
 
-<p>PT6A-67F serial numbers PCE-RZ0090 and prior (excluding RZ0079) installed should consult Service Letter #311 to determine whether a new data plate will need to be installed on the engine.</p>
-
 <p>Maintenance on your Pratt & Whitney PT6A engine is to be done in accordance with Pratt and Whitney Manuals that are listed under “Instructions for Continued Airworthiness" in the Description section. Time and experience have proven that an engine properly maintained will give excellent service with a minimum of down time and expense. Establish a routine maintenance schedule and adhere to it as closely as possible, taking into consideration the problems of busy schedules in mid-season. </p>
 
-<p>The proper engine manuals for the airplane are listed below: </p>
-            <p>“Maintenance Manual - Turboprop Gas Turbine Engine- Models PT6A-45A/-145B/-45R" Manual Part No. 3027042, Vols. 1 & 2 </p>
-
-            <p>“Maintenance Manual - Turboprop Gas Turbine Engine- Models PT6A-65AG/-67AR/-65B/ 
-
-                -65R" Manual Part No. 3032842, Vols. 1 & 2 </p>
-
-                <p>“Maintenance Manual - Turboprop Gas Turbine Engine- Models PT6A-67/-67A/-67R/-67AF/ 
-
-                    -67AG/-67T" Manual Part No. 3036132, Vols. 1 & 2 </p>
-
-                    <p>“Maintenance Manual - Turboprop Gas Turbine Engine- Models PT6A-67F" Manual Part No. 3071152, Vols. 1 & 2 </p>
-
-<p>All of these manuals may be obtained from: </p>
-                    <p>Pratt & Whitney Canada </p>
-                    <p>1000 Marie-Victorin </p>
-                    <p>Longueuil, Quebec </p>
-                    <p>J4G 1A1, Canada </p>
-
-<p>Equally important to proper maintenance is the keeping of records. Maintenance records on a turbine engine are extremely important and every effort should be made to see that all the work performed is properly recorded. A record of the number of starts and flights MUST be kept for figuring cycle counts on the rotor components in your engine at each 12-month inspection. The cycles are figured using the number of starts and flights, with a formula found in the applicable engine Service Bulletin. When these parts reach their life limit in either hours consumed or cycles, they must be removed and discarded. Few of you will ever see a part reach that limit but the records must be kept for your logbooks to be in proper order. Please refer to <xref sectionTarget="5.0" prependLabel="Section"></xref>. </p>
+<p>Equally important to proper maintenance is the keeping of records. Maintenance records on a turbine engine are extremely important and every effort should be made to see that all the work performed is properly recorded. A record of the number of starts and flights MUST be kept for figuring cycle counts on the rotor components in your engine at each 12-month inspection. The cycles are figured using the number of starts and flights, with a formula found in the applicable engine Service Bulletin. When these parts reach their life limit in either hours consumed or cycles, they must be removed and discarded. Few of you will ever see a part reach that limit but the records must be kept for your logbooks to be in proper order.</p>
 
 <p>While on the subject of record keeping, it is a good idea to keep a small pad in the cockpit to record engine parameters on a regular basis. For example, on the return from your first load each day, at the same pressure altitude with the same torque and propeller RPM setting, record the following: hour meter time, OAT, IT, Ng, oil pressure and fuel pressure. When trouble appears, this information will save lots of time troubleshooting and will also give you a good picture of the trends in you engine. Remember, no two engines will run the same. The change in your engine parameters over a period of time is what really matters. Keep it written down because your mind will deceive you over the span of a season and it is the best way for maintenance personnel to make an accurate diagnosis when problems arise. </p>
-
-<p>If your aircraft is equipped with a PT6A-45R engine, it has been brought to our attention that there has been at least one case of a Pratt & Whitney PT6A-45R burner can that had vibrated loose and damaged an igniter plug and a nozzle sheath. This damage was discovered during a hot section inspection. Our Pratt & Whitney Service Representative advised us that they had seen this type of damage before. He indicated that the damage has primarily been discovered in high time engines that have had numerous visits to service shops. He believes that this type of failure is caused by imbalance in the power section, the gas generator section, or an out of balance propeller. He also pointed out that excessively worn or imbalanced gears in the propeller gear box or in the accessory gear box could cause vibrations and this type of damage.</p>
-
-<p>In light of this report we recommend that you remove your igniter plugs and nozzles and inspect them for damage. If damage is found to any of these components a complete hot section inspection should be performed, in accordance with Pratt & Whitney Maintenance Manual, and any required repairs be accomplished. More information may be found in Service Letter #126A.</p>
