--- a/html/Maintenance/Altimeter - Static System.html
+++ b/html/Maintenance/Altimeter - Static System.html
@@ -1,13 +1,32 @@
-<div style="background-color: lightblue;">
-    <p><b>Pitot/Static Calibration    </b></p>
-    <p>The Altimeter uses a density altitude and compares the pressure to a measured static pressure from the static port. Static
-        system needs to be tested for transponder to provide correct altitude.</p>
-    <p>Using Pitot Static tester attach positive pressure line to pitot tube and negative pressure line to static port. Pitot
-     tube on the AT-802A is under the left hand wing. For the two seater AT-802-2, the pitot and static probe is in the leading edge of the left hand wing.
-     The probe on the AT-802-2 will require and adapter to connect vacuum port. To maintain compliance with part 91.411, use Appendix
-     E to part 43 outlines the procedures for performing the altimeter systems test and inspection for the transponder. </p>
+<p>
+    The static port on the AT-802 is contained within the wing-mounted pitot head. The static system on this airplane can
+    be drained by opening the static line inside the leading edge of the wing. Alternatively, the line can be blown out
+    with compressed air. In this case, the static line is accessible beneath the right-hand fuselage skin that attaches
+    to the top of the hopper tank.
+</p>
+
+<div class='boxCautionMedium'>
+    <p class='boxCautionMediumHeader'>CAUTION</p>
+    <p class='boxCautionMediumText'>Apply air pressure only to the line that leads to the pitot-static head. Do not apply
+        air pressure to the line that leads to the instrument panel. Sensitive instruments may be damaged.</p>
 </div>
 
-<p>Certain United Instruments, Inc. 5934 Series Altimeters and 7(1)00 Series (I)VSI instruments have been identified by the manufacturer as having nonconforming dials. These instruments were manufactured between June 2012 and June 2013. The issue, as described in United Instruments Service Note No. 5, is paint displacement around the two screws on the instrument dial. Refer Service Letter #324 for further information.</p>
+<p>
+    The static ports on the AT-802A are the low points of the system and are normally self-draining. There are “T"
+    fittings on the rear face of the static port buttons. The downward-facing arm of the “T" fittings are plugged. These
+    plugs must be removed to drain residual moisture in the static-system lines.
+</p>
 
-<p>5934 Series altimeters that were manufactured between January 2015 and February 2016 by United Instruments, Inc. may be susceptible to developing a slow diaphragm leak which would affect the accuracy of the altimeters. Refer to Service Letter #344 to see if your aircraft is affected.</p>
+<p><b>Pitot/Static Calibration </b></p>
+<p>
+    The Altimeter uses a density altitude and compares the pressure to a measured static pressure from the static port.
+    Static system needs to be tested for the transponder to provide correct altitude.</p>
+<p>
+    Using Pitot Static tester attach positive pressure line to pitot tube and negative pressure line to static port.
+    Pitot
+    tube on the AT-802A is under the left hand wing. For the two seater AT-802-2, the pitot and static probe is in the
+    leading edge of the left hand wing.
+    The probe on the AT-802-2 will require and adapter to connect vacuum port. 
+    To maintain compliance with part 91.411,
+    use Appendix E to part 43 which outlines the procedures for performing the altimeter systems test and inspection for the transponder.
+</p>
