--- a/html/Maintenance/Fuselage Frame.html
+++ b/html/Maintenance/Fuselage Frame.html
@@ -1,5 +1,6 @@
 <p>The fuselage frame is made of 4130N tubing. It may be repaired in conventional ways. AC-4313.1A may be used as a guide for repairs to tubing. All fittings are also of 4130N material. The repaired area should be sanded and burned paint should be removed to a point where it can be feather-edged by sanding. A good etching solution would be a mixture of 1/2 fluid oz. of concentrated phosphoric acid in one gallon of isopropanol (isopropyl alcohol). If relative humidity is extremely low, add 1/4 cup of distilled water to the solution. Factory finish is R9006 Air Ag Yellow Epoxy with R3203 converter. See <xref sectionTarget="2.105.3" prependLabel="Section"></xref> for complete repainting instructions. </p>
 
+<p>If your aircraft does not already have an overturn skid plate installed, it is highly recommended to install one using the information located in Service Letter #97.</p>
 
 <p><b>Reported Issues</b></p>
 <p>For serial numbers -0001 through -0139 (aircraft equipped with the factory-supplied p/n 80540 computerized fire gate
