--- a/html/Maintenance/CONTROL SURFACE UNBALANCE LIMITS.html
+++ b/html/Maintenance/CONTROL SURFACE UNBALANCE LIMITS.html
@@ -4,12 +4,19 @@
 
 <p>To measure the unbalance, the control surface is mounted horizontally on the hinge line as shown in the following figure.  The trailing edge is supported with a scale and distance “x" measured.  The unbalance is equal to “x" multiplied by the scale reading “W".  This value must not exceed the maximum allowable unbalance limit as specified below. </p>
 
-<img class="imageCentered_3x2" src="img/imgTemplate_3x2.png">
+
+<figure>
+    <img class="imageCentered_6x2" src="img/img_ControlSurfaceUnbalance.png">
+    <figcaption class="centerText">Control Surface Unbalance Measurement</figcaption>
+</figure>
 
 <p>Unbalance limits for the 802/802A: </p>
-
-<p>Ailerons </p>
-<p>S/N 0001 thru 0073 (wide ailerons)	61.6 inch-lbs </p>
-<p>S/N 0074 and subs (narrow ailerons)	46.33 inch-lbs </p>
-<p>Elevators				            63.15 inch-lbs </p>
-<p>Rudder					            22.25 inch-lbs </p>
+<div class="tabOver">
+    <p>Ailerons </p>
+    <p class="tabOver">S/N 0001 thru 0073 (wide ailerons): 61.6 inch-lbs </p>
+    <p class="tabOver">S/N 0074 and subs (narrow ailerons): 46.33 inch-lbs </p>
+    <p>Elevators</p>
+    <p class="tabOver">63.15 inch-lbs</p>
+    <p>Rudder</p>
+    <p class="tabOver">22.25 inch-lbs</p>
+</div>
