--- a/html/Maintenance/Recommended Time Limits.html
+++ b/html/Maintenance/Recommended Time Limits.html
@@ -1,4 +1,4 @@
-<p>Air Tractor suggests that the parts listed in this section are replaced or overhauled at the intervals shown.</p>
+<p>Air Tractor recommends that the parts listed in this section are replaced or overhauled at the intervals shown.</p>
 <table class="plainTableLarge">
     <tr>
         <th class="plainTableHeaderCell">Part Number</th>
