updated inspection numbering,

--- a/html/Maintenance/Canopy Doors.html
+++ b/html/Maintenance/Canopy Doors.html
@@ -1,4 +1,4 @@
-<p>The canopy doors seal against the door frame with X202Bt neoprene sponge. This material has a PSA backing. Be careful not to stretch the strip during installation or it will come loose. </p>
+<p>The canopy doors seal against the door frame with X105BT (or X202BT or SC-41) neoprene sponge. This material has a PSA backing. Be careful not to stretch the strip during installation or it will come loose. </p>
 
 <p>The door frame has a slight inward bow of 1/8" to allow for door deflection outward at high speeds. The low pressure around the canopy causes the doors to bow outward. The door latch should provide a snug door fit, and if it does not, and the weather-strip is in good condition, bend the latch arm that rides on the plated striker plate (p/n 10354-1 (L/H) or -2 (R/H)). </p>
 
